--- a/.github/workflows/dockerimage.yml
+++ b/.github/workflows/dockerimage.yml
@@ -1,18 +1,18 @@
 name: Docker Image CI
 
-on:
-  push:
-    branches: [ master ]
-  pull_request:
-    branches: [ master ]
+on: [push]
 
 jobs:
 
   build:
 
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-18.04
 
     steps:
-    - uses: actions/checkout@v2
-    - name: Build the Docker image
-      run: docker build . --file Dockerfile --tag my-image-name:$(date +%s)
+    - uses: actions/checkout@v1
+    - name: Build Jupyter Extensibe Image
+      run: docker build . --file Dockerfile --tag rjbenikar/jpds:latest
+    - name: Perform DH Login
+      run: docker login -u ${{ secrets.UID }} -p ${{ secrets.PASSWORD }}
+    - name: Push New Image
+      run: docker push rjbenikar/jpds:latest
